# rjs

./: .gitignore  Cargo.toml  README.md  build.sh  git_push.sh  package.json  performance_results.txt  rjs-lock.json  run_performance_tests.sh  run_tests.sh  setup.sh
scripts/dev/: build.sh  setup.sh
scripts/git/: push.sh
scripts/tests/: README.md  run_performance_tests.sh  run_tests.sh
scripts/utils/: common.sh
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: init.rs  install.rs  list.rs  mod.rs
src/dependency/: mod.rs
src/registry/: mod.rs
src/utils/: mod.rs
test_project/test_run_1742650640/: package.json
tests/: functional.rs  performance.rs
